# nanoagent

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
docs/: DESIGN.md  v0.1-design.md
nanoagent/: __init__.py  api.py
nanoagent/cli/: __init__.py  main.py
nanoagent/core/: __init__.py  context.py  errors.py  hooks.py  loop.py  message.py  protocols.py  stop.py
nanoagent/llm/: __init__.py  echo.py  openai_compat.py
nanoagent/memory/: __init__.py  backend.py
nanoagent/strategies/: __init__.py  context.py  permission.py  stop.py
nanoagent/tools/: __init__.py  builtin.py  decorator.py  registry.py  schema.py
tests/: test_api.py  test_cli.py  test_core.py  test_llm.py  test_loop.py  test_memory.py  test_strategies.py  test_tools.py
