[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoagent"
version = "0.1.0.dev0"
description = "易于理解、可融入最佳实践、且真正可用的 ReAct 单 agent Python 框架（核心循环 ~30 行）"
readme = "README.md"
requires-python = ">=3.9"   # 注：CLI 配置读取计划用 tomllib（3.11+）；3.9/3.10 届时用 tomli 兜底或上调下限（Day5 定，见 v0.1-design.md §9.2）
license = { text = "MIT" }
dependencies = [
    "openai>=1.30",
    "prompt-toolkit>=3",
    "rich>=13",
    "tiktoken>=0.7",
    "duckduckgo-search>=6",
]

[project.scripts]
nanoagent = "nanoagent.cli.main:main"   # cli 尚未实现（Day5）；入口映射按 CLAUDE.md 硬约束先就位

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "import-linter>=2"]
trace = ["opentelemetry-sdk>=1.20"]
anthropic = ["anthropic>=0.30"]

[tool.hatch.build.targets.wheel]
packages = ["nanoagent"]

# 单测：python -m pytest 即可，不需 pip install；pythonpath 让 tests 直接 import nanoagent
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

# 依赖防线（DESIGN §8.1）：core 不得 import 任何外层。CI 跑 `lint-imports`。
[tool.importlinter]
root_package = "nanoagent"

[[tool.importlinter.contracts]]
name = "core 不依赖任何外层"
type = "forbidden"
source_modules = ["nanoagent.core"]
forbidden_modules = [
    "nanoagent.strategies",
    "nanoagent.tools",
    "nanoagent.llm",
    "nanoagent.memory",
    "nanoagent.cli",
    "nanoagent.api",
]
